implemented email service. Please change mail.properties according to actual email server

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,11 +1,11 @@
 jdbcUrl=jdbc:mysql://localhost:3306/tournament?autoReconnect=true&useSSL=false
 driverClass=com.mysql.jdbc.Driver
 userName=root
-password=root
+password=passw
 db.userName=root
-db.password=root
+db.password=passw
 
-hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
