Add accept menu to admin

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,11 +1,10 @@
 jdbcUrl=jdbc:mysql://localhost:3306/tournament?autoReconnect=true&useSSL=false
 driverClass=com.mysql.jdbc.Driver
 userName=root
-password=passw
+password=root
 db.userName=root
-db.password=passw
-
-hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+db.password=root
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
