Admin menu improved -Image menu added -Mail menu added

--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -1,12 +1,10 @@
 mail.protocol = smtp
-mail.host = smtp.gmail.com
-mail.port = 465
-mail.smtp.socketFactory.port = 465
+mail.host=mail.tsi.lv
+mail.port=587
 mail.smtp.auth = true
 mail.smtp.starttls.enable = true
 mail.smtp.starttls.required = true
 mail.smtp.debug = true
-mail.smtp.socketFactory.fallback = false
-mail.from = viktor.antipin@gmail.com
-mail.username = viktor.antipin@gmail.com
-mail.password=xxx
+mail.from=rt@tsi.lv
+mail.username=rt
+mail.password=p9ApUe6MSAXA
