--- a/pom.xml
+++ b/pom.xml
@@ -209,7 +209,12 @@
             <artifactId>gson</artifactId>
             <version>2.8.1</version>
         </dependency>
-
+        <!-- MVC for eMails templates-->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.26-incubating</version>
+        </dependency>
     </dependencies>
 
 
