-Photo page added -Video page added -minor bug fixes

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,2 +1,2 @@
-//SAVE_PATH=/opt/tomcat/webapps/store
-SAVE_PATH=C:\\Progs\\apache-tomcat-9.0.0.M21\\webapps\\store
+SAVE_PATH=/opt/tomcat/webapps/store
+//SAVE_PATH=C:\\Progs\\apache-tomcat-9.0.0.M21\\webapps\\store
